# Mimir

./: mimir.cabal  stack.yaml
src/: Mimir.hs
src/Mimir/: API.hs  BitX.hs  Bitfinex.hs  Exec.hs  Free.hs  Func.hs  HTTP.hs  Instances.hs  OKCoin.hs  Sim.hs  Std.hs  Test.hs  Types.hs
src/Mimir/BitX/: Instances.hs  Types.hs
src/Mimir/Bitfinex/: Instances.hs  Types.hs
src/Mimir/OKCoin/: Instances.hs  Types.hs
src/Mimir/Sim/: Types.hs
src/Mimir/Std/: Constructor.hs  Func.hs  HTTP.hs  Types.hs
src/Mimir/Test/: Types.hs
test/: Spec.hs
