name:                mimir
version:             0.2.1
synopsis:            Bitcoin trading library
description:         Bitcoin trading library
homepage:            http://github.com/feeniks/mimir#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
copyright:           2016 Ralph Morton
category:            Finance
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mimir
                     , Mimir.Types
                     , Mimir.Std
                     , Mimir.Std.Types
                     , Mimir.Std.HTTP
                     , Mimir.Std.Func
                     , Mimir.Sim
                     , Mimir.Sim.Types
                     , Mimir.BitX
                     , Mimir.BitX.Types
                     , Mimir.BitX.Instances
                     , Mimir.OKCoin
                     , Mimir.OKCoin.Types
                     , Mimir.OKCoin.Instances
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.1.3.1
                     , stm >= 2.4.4.1
                     , time >= 1.4.2
                     , bytestring >= 0.10.4.0
                     , text >= 1.2.0
                     , containers >= 0.5.5.1
                     , lens >= 4.13
                     , aeson >= 0.8.0.2
                     , either >= 4.4.1
                     , http-conduit >= 2.1.8
                     , http-client >= 0.4.27
                     , http-types >= 0.9
                     , cryptohash >= 0.11.6
                     , vector >= 0.11.0.0
                     , base16-bytestring >= 0.1.1.6
  default-language:    Haskell2010

test-suite mimir-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mimir
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/feeniks/mimir
