name:                mimir
version:             0.4.0
synopsis:            Bitcoin trading library
description:         Bitcoin trading library
homepage:            http://github.com/ralphmorton/mimir#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
copyright:           2016 Ralph Morton
category:            Finance
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mimir.API
                     , Mimir.Types
                     , Mimir.Free
                     , Mimir.Exec
                     , Mimir.Bitfinex
                     , Mimir.Bitfinex.Types
  other-modules:       Mimir.Instances
                     , Mimir.Bitfinex.Instances
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , time >= 1.5.0.1
                     , stm >= 2.4.4.1
                     , lens >= 4.13
                     , text >= 1.2.2.1
                     , bytestring >= 0.10.8.1
                     , base16-bytestring >= 0.1.1.6
                     , base64-bytestring >= 1.0.0.1
                     , containers >= 0.5.6.2
                     , unordered-containers >= 0.2.7.0
                     , cryptonite >= 0.1.7
                     , aeson >= 0.11.2.0
                     , nano-http >= 0.1.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ralphmorton/mimir
